--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,47 @@
-/* You can add global styles to this file, and also import other style files */
+body {
+    margin: 0;
+    padding: 0;
+}
+
+.imgSliderClass {
+    width: 100%;
+}
+
+.slideranimation {
+    animation: picAnimation 5s ease-in-out;
+}
+
+.slider-container {
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    overflow: hidden;
+}
+
+.slider-overlay-container {
+    position: absolute;
+    left: 0;
+    top: 0;
+    background-color: rgba(0, 0, 0, 0.4);
+    display: flex;
+    align-items: center;
+    overflow: hidden;
+
+
+    p {
+        color: white;
+        font-size: 64px;
+        margin-left: 120px;
+        border-left: solid red 5px;
+    }
+}
+
+@keyframes picAnimation {
+    from {
+        transform: scale(1);
+    }
+
+    to {
+        transform: scale(1.2)
+    }
+}
