create new modul (slidershow)

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,1 @@
-<div class="slider-container">
-  <img *ngIf="showImage" class="imgSliderClass slideranimation" src="assets/img/{{images[currentImage]}}" alt="">
-</div>
-<div class="slider-container slider-overlay-container">
-  <p *ngIf="showImage" class="fadeInText">{{startSlogans[currentImage]}}</p>
-</div>
+<app-slider-show></app-slider-show>
