last commit (i think)

--- a/src/app/header-menu/header-menu.component.html
+++ b/src/app/header-menu/header-menu.component.html
@@ -1,11 +1,9 @@
 <header>
-    <img src="assets/img/LogoMakr-0cmo7K.png" alt="">
+    <img routerLink="/" src="assets/img/LogoMakr-0cmo7K.png" alt="">
 
     <div>
-        <a href="#">Link</a>
-        <a href="#">Link</a>
-        <a href="#">Link</a>
-        <a href="#">Link</a>
-        <a href="#">Link</a>
+        <a href="/cats-universe/">Cat Universe</a>
+        <a routerLink="/pictures">Pictures</a>
+        <a routerLink="/history-link">History</a>
     </div>
 </header>
