--- a/src/app/header-menu/header-menu.component.scss
+++ b/src/app/header-menu/header-menu.component.scss
@@ -14,4 +14,12 @@ header{
     img{
         width: 150px;
     }
+
+    a{
+        margin-left: 32px;
+        text-decoration: none;
+        color: white;
+        font-weight: 800;
+        font-size: 20px;
+    }
 }
